# nginx-oidc

./: .gitignore  Cargo.nix  Cargo.toml  README.md  config.yml  flake.nix  nixos-options.md  renovate.json  treefmt.nix
.github/workflows/: nix.yml  rust.yml
nix/: docs.nix  module.nix  package.nix  test.nix
src/: config.rs  lib.rs  main.rs  utils.rs
src/cli/: mod.rs  serve.rs
src/http/: cookie.rs  mod.rs  state.rs
src/http/routes/: auth.rs  callback.rs  mod.rs
src/oidc/: auth.rs  client.rs  custom_claims.rs  mod.rs  token.rs  userinfo.rs
